--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "country-state-city": "^3.2.1",
     "embla-carousel-autoplay": "^8.1.8",
     "embla-carousel-react": "^8.1.8",
+    "install": "^0.13.0",
     "lucide-react": "^0.424.0",
+    "npm": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
+    "supabase": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.4",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
