--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "country-state-city": "^3.2.1",
     "embla-carousel-autoplay": "^8.1.8",
     "embla-carousel-react": "^8.1.8",
+    "framer-motion": "^11.16.2",
     "install": "^0.13.0",
     "lucide-react": "^0.424.0",
     "npm": "^11.0.0",
